# b2sll-open-charm-fit

./: README.md
Rratio/: CMakeLists.txt  README.md
Rratio/coupled_channel/include/: BESRModel.h  BESRParser.h  DecayChannel.h  Dispersion.h  Plotting.h
Rratio/coupled_channel/src/: BESRModel.cc  BESRParser.cc  DecayChannel.cc  Dispersion.cc  PerturbativeQCD.cc
Rratio/data/: exportHepData.py  ins552757-v1.root  ins552757-v1.yaml
Rratio/include/: PerturbativeQCD.h  RandomSampling.h  Variables.h
Rratio/kmatrix/scripts/: kmatrix_R_fit.py
Rratio/src/: CMakeLists.txt  Plotting.cc  RandomSampling.cc  Variables.cc
Rratio/test/: test.json  testBES.cc
